# api-django-fastapi

./: .flake8  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.docker/: server.dockerfile
characters/: admin.py  endpoints.py  models.py  schemas.py
characters/migrations/: 0001_initial.py
characters/tests/: test_models.py
core/: asgi.py  settings.py
django_fastapi/: asgi.py  settings.py  urls.py
