[tool.poetry]
name = "djfast"
version = "0.1.0"
description = ""
authors = ["Daniel Andrés <Daniel.Andres.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
django = "^4.1.5"
uvicorn = "^0.20.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
